--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+
+venv
+ML-Agents
+results
+Recordings
+
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
